--- a/css/contact-confirm.css
+++ b/css/contact-confirm.css
@@ -74,46 +74,6 @@
     font-size: 1.6rem;
   }
 }
-/*  check-number
-  --------------------------------*/
-.checkArea {
-  margin-bottom: 100px;
-}
-.check-numberArea {
-  width: 38vw;
-  height: 3vw;
-  max-width: 550px;
-  max-height: 35px;
-  margin: 0 auto;
-  margin-bottom: 75px;
-}
-.check-numberArea ul {
-  margin: 0 auto;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-.check-numberArea ul div {
-  width: 4vw;
-  height: 1px;
-  border-bottom: solid 1px #707070;
-}
-.check-numberArea ul span {
-  font-size: 2.4rem;
-}
-.check-numberArea ul li {
-  white-space: nowrap;
-  padding-bottom: 8px;
-  margin-left: 20px;
-}
-.check-numberArea li:nth-of-type(2) {
-  border-bottom: solid 3px #a0a654;
-}
-@media (max-width: 520px) {
-  .check-numberArea ul span {
-    font-size: 1.6rem;
-  }
-}
 
 /*  attention
   --------------------------------*/
@@ -131,17 +91,15 @@
   max-width: 933px;
   margin: 0 auto;
 }
-.attention-text {
-  padding: 40px;
-}
 .attention-wrapper h3 {
   padding-bottom: 20px;
   font-size: 3.2rem;
   font-weight: 500;
   letter-spacing: 0.4rem;
 }
-.attention-wrapper h3 span {
-  color: #ff0000;
+
+form p {
+  margin-bottom: 30px;
 }
 
 @media (max-width: 960px) {
