--- a/css/gallery.css
+++ b/css/gallery.css
@@ -48,12 +48,12 @@ header {
     background-size: cover;
     overflow: hidden;
     width: 100vw;
-    height: auto;
+    height: 100%;
     margin-bottom: 140px;
   }
   .header-wrapper {
     width: 100vw;
-    height: 600px;
+    height: 100%;
     background-color: rgba(0, 0, 0, 0.1);
   }
 }
@@ -65,12 +65,12 @@ header {
     background-size: cover;
     overflow: hidden;
     width: 100vw;
-    height: auto;
+    height: 100%;
     margin-bottom: 30px;
   }
   .header-wrapper {
     width: 100vw;
-    height: 100vw;
+    height: 100%;
     min-height: 460px;
     background-color: rgba(0, 0, 0, 0.1);
   }
