--- a/css/menu.css
+++ b/css/menu.css
@@ -50,7 +50,7 @@
     background: url(../img/3menuTop03@2x.jpg) no-repeat 70% 0%;
     background-attachment: fixed;
     background-size: cover;
-    overflow: hidden;
+    /* overflow: hidden; */
     width: 100vw;
     height: 600px;
     margin-bottom: 140px;
