--- a/css/gallery.css
+++ b/css/gallery.css
@@ -7,7 +7,7 @@
 
 header {
   position: relative;
-  background: url(../img/2galleryTop.jpeg) no-repeat;
+  background: url(../img/2galleryTop.jpeg) no-repeat center center;
   background-attachment: fixed;
   background-size: cover;
   width: 100vw;
@@ -44,35 +44,35 @@ header {
 @media (max-width: 960px) {
   header {
     position: relative;
-    background: url(../img/2galleryTop.jpeg) no-repeat center center;
+    background: url(../img/2galleryTop.jpeg) no-repeat 0% 0%;
     background-attachment: fixed;
     background-size: cover;
-    overflow: hidden;
+    /* overflow: hidden; */
     width: 100vw;
-    height: 600px;
+    height: 100vh;
     margin-bottom: 140px;
   }
   .header-wrapper {
     width: 100vw;
-    height: 100%;
+    height: 100vh;
     background-color: rgba(0, 0, 0, 0.1);
   }
 }
 @media (max-width: 520px) {
   header {
     position: relative;
-    background: url(../img/2galleryTop.jpeg) no-repeat 0% 100%;
+    background: url(../img/2galleryTop.jpeg) no-repeat 0% 0%;
     background-attachment: fixed;
     background-size: cover;
     overflow: hidden;
     width: 100vw;
-    height: 100%;
+    height: 100vh;
     margin-bottom: 30px;
   }
   .header-wrapper {
     width: 100vw;
-    height: 600px;
-    min-height: 460px;
+    height: 100vh;
+    /* min-height: 460px; */
     background-color: rgba(0, 0, 0, 0.1);
   }
   .subtitle-area h2 {
@@ -212,22 +212,27 @@ header {
   max-width: 600px;
   max-height: 748px;
   object-fit: cover;
-  animation-name: fuwa;
+  /* animation-name: fuwa;
   animation-duration: 3s;
   animation-delay: 0.5s;
   animation-timing-function: ease-in-out;
   animation-fill-mode: forwards;
   animation-iteration-count: infinite;
-  opacity: 0;
+  opacity: 0; */
+  transition-property: all;
+  transition-duration: 0.5s;
+  transition-delay: 0;
+  transition-timing-function: ease-in-out;
 }
-@keyframes fuwa {
+
+/* @keyframes fuwa {
   0% {
     opacity: 0;
   }
   100% {
     opacity: 1;
   }
-}
+} */
 
 .gallery-photo_main img.fadeFade {
   animation-name: fadefade;
