--- a/css/common.css
+++ b/css/common.css
@@ -100,9 +100,9 @@ a {
 }
 
 header nav {
-  position: absolute;
+  position: fixed;
   top: 0;
-  left: 0;
+  right: 0;
   bottom: 0;
   width: 100vw;
   height: 100vh;
@@ -115,7 +115,7 @@ header nav {
   transition-duration: 0.6;
   transition-delay: 0;
   transition-timing-function: ease-in-out;
-  left: 0;
+  /* left: 105%; */
 }
 
 /* JQ動作 */
@@ -124,6 +124,7 @@ header nav.active {
   display: block;
   opacity: 1;
   pointer-events: auto;
+  right: 0;
 }
 header nav.slideRight {
   animation-name: slideright;
@@ -136,23 +137,23 @@ header nav.slideRight {
   transition-duration: 1s;
   transition-delay: 0;
   transition-timing-function: ease-in-out;
-}
-
-header nav {
-  transition-property: all;
-  transition-duration: 1s;
-  transition-delay: 0;
-  transition-timing-function: ease-in-out;
-  left: 100%;
+  /* left: 105%; */
 }
 @keyframes slideright {
   0% {
-    left: 100%;
+    left: 105%;
   }
   100% {
     left: 0;
   }
 }
+/* header nav.active {
+  transition-property: all;
+  transition-duration: 1s;
+  transition-delay: 0;
+  transition-timing-function: ease-in-out;
+} */
+
 /* header nav.active.SlideToRight {
   animation-name: slidetoright;
   animation-duration: 1s;
