--- a/css/gallery.css
+++ b/css/gallery.css
@@ -4,17 +4,29 @@
 
 /*  header
 --------------------------------*/
-
 header {
   position: relative;
   background: url(../img/2galleryTop.jpeg) no-repeat center center;
   background-attachment: fixed;
   background-size: cover;
+  -webkit-background-size: cover;
   width: 100vw;
   height: 600px;
-  /* height: 600px; */
   margin-bottom: 140px;
 }
+/* header::before {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  width: 100vw;
+  height: 600px;
+  background: url(../img/2galleryTop.jpeg) no-repeat center center;
+  -webkit-background-size: cover;
+  background-size: cover;
+  content: "";
+} */
+
 .header-wrapper {
   width: 100vw;
   height: 600px;
@@ -47,14 +59,14 @@ header {
     background: url(../img/2galleryTop.jpeg) no-repeat 0% 0%;
     background-attachment: fixed;
     background-size: cover;
-    /* overflow: hidden; */
     width: 100vw;
-    height: 100vh;
+    height: 600px;
     margin-bottom: 140px;
   }
+
   .header-wrapper {
     width: 100vw;
-    height: 100vh;
+    height: 600px;
     background-color: rgba(0, 0, 0, 0.1);
   }
 }
@@ -64,14 +76,14 @@ header {
     background: url(../img/2galleryTop.jpeg) no-repeat 0% 0%;
     background-attachment: fixed;
     background-size: cover;
-    overflow: hidden;
+    /* overflow: hidden; */
     width: 100vw;
-    height: 100vh;
+    height: 600px;
     margin-bottom: 30px;
   }
   .header-wrapper {
     width: 100vw;
-    height: 100vh;
+    height: 600px;
     /* min-height: 460px; */
     background-color: rgba(0, 0, 0, 0.1);
   }
