--- a/css/common.css
+++ b/css/common.css
@@ -102,7 +102,7 @@ a {
 header nav {
   position: fixed;
   top: 0;
-  right: 0;
+  left: 105%;
   bottom: 0;
   width: 100vw;
   height: 100vh;
@@ -115,7 +115,6 @@ header nav {
   transition-duration: 0.6;
   transition-delay: 0;
   transition-timing-function: ease-in-out;
-  /* left: 105%; */
 }
 
 /* JQ動作 */
@@ -124,7 +123,7 @@ header nav.active {
   display: block;
   opacity: 1;
   pointer-events: auto;
-  right: 0;
+  left: 0;
 }
 header nav.slideRight {
   animation-name: slideright;
@@ -133,11 +132,11 @@ header nav.slideRight {
   animation-timing-function: ease-in-out;
   animation-iteration-count: 1;
   animation-fill-mode: both;
-  transition-property: all;
+  /* transition-property: all;
   transition-duration: 1s;
   transition-delay: 0;
   transition-timing-function: ease-in-out;
-  /* left: 105%; */
+  left: 0%; */
 }
 @keyframes slideright {
   0% {
@@ -147,12 +146,12 @@ header nav.slideRight {
     left: 0;
   }
 }
-/* header nav.active {
+header nav.active {
   transition-property: all;
   transition-duration: 1s;
   transition-delay: 0;
   transition-timing-function: ease-in-out;
-} */
+}
 
 /* header nav.active.SlideToRight {
   animation-name: slidetoright;
