--- a/css/contact-thanks.css
+++ b/css/contact-thanks.css
@@ -64,7 +64,80 @@
 .check-numberArea li:nth-of-type(3) {
   border-bottom: solid 3px #a0a654;
 }
+@media (max-width: 960px) {
+  .header-container {
+    margin-bottom: 100px;
+  }
+  .contact-bgArea {
+    position: absolute;
+    background-color: #f2db94;
+    width: 105vw;
+    height: 260px;
+    clip-path: polygon(0 0, 75% 0, 85% 50%, 75% 100%, 0 100%);
+  }
+  .contact-bgArea h1 {
+    font-size: 6rem;
+    padding-top: 30px;
+  }
+  .contact-bgArea p {
+    font-size: 1.6rem;
+  }
+}
 @media (max-width: 520px) {
+  .contact-relative {
+    height: 300px;
+  }
+  .contact-bgArea {
+    width: 105vw;
+    height: 200px;
+  }
+  .contact-bgArea h1 {
+    font-size: 4rem;
+    line-height: 8rem;
+    /* padding-bottom: 0px; */
+  }
+  .header-container img {
+    width: 28vw;
+    height: 14vw;
+    z-index: 10;
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    z-index: 1;
+  }
+}
+@media (max-width: 960px) {
+  .checkArea {
+    max-width: 810px;
+    /* height: 43px; */
+    margin: 0 auto;
+    margin-bottom: 60px;
+  }
+  .check-numberArea {
+    width: 300px;
+    margin-bottom: 75px;
+  }
+  .check-numberArea ul {
+    width: 300px;
+    margin: 0 auto;
+  }
+  .check-numberArea ul li {
+    margin: 0 10px;
+  }
+  .check-numberArea ul div {
+    display: none;
+  }
+}
+@media (max-width: 520px) {
+  .checkArea {
+    max-width: 370px;
+    margin: 0 auto;
+    margin-bottom: 60px;
+  }
+  .check-numberArea ul {
+    width: 250px;
+    margin: 0 auto;
+  }
   .check-numberArea ul span {
     font-size: 1.6rem;
   }
@@ -90,4 +163,19 @@
 }
 .thanks-gray__area h2 {
   margin-bottom: 24px;
+}
+@media (max-width: 960px) {
+  .thanks-gray__area {
+    width: 60vw;
+    max-width: 810px;
+    margin: 0 auto;
+    margin-bottom: 60px;
+  }
+}
+@media (max-width: 520px) {
+  .thanks-gray__area {
+    width: 360px;
+    margin: 0 auto;
+    margin-bottom: 30px;
+  }
 }
