--- a/css/common.css
+++ b/css/common.css
@@ -108,30 +108,30 @@ header nav {
   height: 100vh;
   z-index: 35;
   background-color: rgb(000, 000, 000, 0.8);
-  display: none;
+  /* display: none; */
   opacity: 0;
   pointer-events: none;
   transition-property: all;
-  transition-duration: 0.6;
-  transition-delay: 0;
+  transition-duration: 0.6s;
+  transition-delay: 0s;
   transition-timing-function: ease-in-out;
 }
 
 /* JQ動作 */
 
 header nav.active {
-  display: block;
+  /* display: block; */
   opacity: 1;
   pointer-events: auto;
   left: 0;
 }
 header nav.slideRight {
-  animation-name: slideright;
+  /* animation-name: slideright;
   animation-duration: 1s;
   animation-delay: 0;
   animation-timing-function: ease-in-out;
   animation-iteration-count: 1;
-  animation-fill-mode: both;
+  animation-fill-mode: both; */
   /* transition-property: all;
   transition-duration: 1s;
   transition-delay: 0;
@@ -149,7 +149,7 @@ header nav.slideRight {
 header nav.active {
   transition-property: all;
   transition-duration: 1s;
-  transition-delay: 0;
+  transition-delay: 0s;
   transition-timing-function: ease-in-out;
 }
 
