--- a/css/gallery.css
+++ b/css/gallery.css
@@ -393,6 +393,7 @@ header {
 @media (max-width: 520px) {
   .row {
     max-width: 400px;
+    /* overflow: hidden; */
   }
   .gallery-area h2 {
     font-family: "prenton", sans-serif;
