--- a/css/gallery.css
+++ b/css/gallery.css
@@ -9,23 +9,24 @@ header {
   background: url(../img/2galleryTop.jpeg) no-repeat 0% 0%;
   background-attachment: fixed;
   background-size: cover;
-  -webkit-background-size: cover;
+  /* -webkit-background-size: cover; */
   width: 100vw;
   height: 600px;
   margin-bottom: 140px;
 }
-/* header::before {
+.header-wrap::before {
+  display: block;
   position: fixed;
   top: 0;
   left: 0;
-  z-index: -1;
-  width: 100vw;
+  z-index: -10;
+  width: 100%;
   height: 600px;
-  background: url(../img/2galleryTop.jpeg) no-repeat center center;
+  background-image: url(../img/2galleryTop.jpeg) no-repeat 0% 0%;
   -webkit-background-size: cover;
   background-size: cover;
   content: "";
-} */
+}
 
 .header-wrapper {
   width: 100vw;
